Add MVC for Employee

--- a/WebApplication1/Views/Test/MyView.cshtml
+++ b/WebApplication1/Views/Test/MyView.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using WebApplication1.ViewModels
+@model EmployeeListViewModel
 @{
     Layout = null;
 }
@@ -11,7 +12,22 @@
     <title>MyView</title>
 </head>
 <body>
-    <div> 
+    Hello @Model.UserName
+    <hr />
+    <div>
+        <table>
+            <tr>
+                <th>Employee Name</th>
+                <th>Salary</th>
+            </tr>
+            @foreach (EmployeeViewModel item in Model.Employees)
+            {
+                <tr>
+                    <td>@item.EmployeeName</td>
+                    <td style="background-color:@item.SalaryColor">@item.Salary</td>
+                </tr>
+            }
+        </table>
     </div>
 </body>
 </html>
